fixed highscore text on smaller screens so that it's on one row, created class for shadow and border

--- a/frontend/src/assets/scss/_layout.scss
+++ b/frontend/src/assets/scss/_layout.scss
@@ -15,6 +15,14 @@
 	padding: 0.5rem;
 }
 
+.small-element {
+	border: 2px dashed $light-color;
+	border-radius: 8px;
+	box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+	-webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+	-moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
 // Media-queries
 @media screen and (min-width: $breakpoint-desktop) {
 
